--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -20,3 +20,8 @@ jobs:
 
       - name: Run Python script
         run: python app.py
+      - name: Run tests
+        run: |
+          pip install pytest
+          pytest
+
